working on scss structure

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,7 @@
-body {
-	background-color: pink;
-}
+@use "../sections/generals";
+@use "../sections/header";
+@use "../sections/about";
+@use "../sections/skills";
+@use "../sections/projects";
+@use "../sections/contact";
+@use "../sections/footer";
